--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-a",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "start": "yarn serve",
@@ -9,10 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@doosanlibrary/footer": "^0.0.1",
+    "@doosanlibrary/header": "^0.0.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "@doosanlibrary/header": "*",
-    "@doosanlibrary/footer": "*"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
