--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,7 +1,6 @@
 {
   "name": "proj-a",
   "version": "0.1.5",
-  "private": true,
   "scripts": {
     "start": "yarn serve",
     "serve": "vue-cli-service serve",
@@ -9,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@doosanlibrary/footer": "^0.0.3",
-    "@doosanlibrary/header": "^0.0.3",
+    "@customlibrary/footer": "^0.0.3",
+    "@customlibrary/header": "^0.0.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
