--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,6 +1,7 @@
 {
   "name": "proj-a",
   "version": "0.1.12",
+  "private": true,
   "scripts": {
     "start": "yarn serve",
     "serve": "vue-cli-service serve",
