--- a/components/footer/package.json
+++ b/components/footer/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@customlibrary/footer",
+  "version": "0.0.16",
   "description": "Shared",
   "main": "dist/index.js",
   "module": "src/index.js",
