--- a/components/footer/package.json
+++ b/components/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@customlibrary/footer",
-  "version": "0.0.18-frozen.2",
+  "version": "0.0.18",
   "description": "Shared",
   "main": "dist/index.js",
   "module": "src/index.js",
