--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-a",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "private": true,
   "scripts": {
     "start": "yarn serve",
@@ -9,7 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@customlibrary/footer": "*",
+    "@customlibrary/footer": "^0.0.19",
     "@customlibrary/header": "0.0.9",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
