--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-a",
-  "version": "0.1.21",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "yarn serve",
@@ -9,8 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@customlibrary/footer": "^0.0.20",
-    "@customlibrary/header": "0.0.9",
+    "@customlibrary/footer": "^0.1.0",
+    "@customlibrary/header": "^0.1.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
