--- a/packages/proj-b/package.json
+++ b/packages/proj-b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-b",
-  "version": "0.1.17",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "yarn serve",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@customlibrary/footer": "^0.0.15",
-    "@customlibrary/header": "0.0.9",
+    "@customlibrary/header": "^0.1.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
