--- a/components/footer/package.json
+++ b/components/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@customlibrary/footer",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "Shared",
   "main": "dist/index.js",
   "module": "src/index.js",
