--- a/components/footer/package.json
+++ b/components/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@customlibrary/footer",
-  "version": "0.2.0",
+  "version": "0.3.0-next.0",
   "description": "Shared",
   "main": "dist/index.js",
   "module": "src/index.js",
