--- a/components/header/package.json
+++ b/components/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@customlibrary/header",
-  "version": "0.3.0",
+  "version": "0.4.0-next.0",
   "description": "Shared",
   "main": "dist/index.js",
   "module": "src/index.js",
