--- a/lerna.json
+++ b/lerna.json
@@ -3,10 +3,13 @@
     "packages/*",
     "components/*"
   ],
-  "version": "1.0.0",
+  "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
+    "publish": {
+      "conventionalCommits": true
+    },
     "version": {
       "allowBranch": "master"
     }
