--- a/components/lib/package.json
+++ b/components/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@customlibrary/lib",
-  "version": "0.4.0-next.0",
+  "version": "1.0.0",
   "description": "Shared",
   "main": "dist/index.js",
   "module": "src/index.js",
