--- a/packages/proj-b/package.json
+++ b/packages/proj-b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-b",
-  "version": "1.2.0-okta.2020.10.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "start": "yarn serve",
