--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
     "packages/*",
     "components/*"
   ],
-  "version": "independent",
+  "version": "2020.1.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
