--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-a",
-  "version": "1.3.0-dmiq.2020.11.1",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "start": "yarn serve",
