--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -9,8 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@customlibrary/footer": "^1.8.0-app1-2020-13.0",
-    "@customlibrary/header": "^1.9.0-app1.0",
+    "@customlibrary/footer": "^1.8.0",
+    "@customlibrary/header": "^1.7.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
