--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -9,7 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@customlibrary/footer": "^1.9.1",
+    "@customlibrary/footer": "1.8.0",
     "@customlibrary/header": "^1.9.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
