--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "packages/*",
     "components/*"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "@customlibrary/header": "1.9.2"
+  }
 }
