--- a/packages/proj-a/package.json
+++ b/packages/proj-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proj-a",
-  "version": "1.9.4",
+  "version": "1.9.5",
   "private": true,
   "scripts": {
     "start": "yarn serve",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@customlibrary/footer": "1.9.2",
-    "@customlibrary/header": "1.9.4",
+    "@customlibrary/header": "^1.9.5",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
